samples/_failures_safe/1761325760_ffdc80_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a708793.c: In function ‘main’:
./samples/SAFE/__tmp_7a708793.c:175:36: error: expected ‘]’ at end of input
  175 |         printf(": '%s'\n", tokens[i
      |                                    ^
      |                                    ]
./samples/SAFE/__tmp_7a708793.c:175:9: error: expected declaration or statement at end of input
  175 |         printf(": '%s'\n", tokens[i
      |         ^~~~~~
./samples/SAFE/__tmp_7a708793.c:175:9: error: expected declaration or statement at end of input
